CB-14607 Throw more usefull message for auto scaling failure than default aws waiter's message.